2017-12-18  Joel Brobecker  <brobecker@adacore.com>

	* gdb.dwarf2/ada-valprint-error.c: New file.
	* gdb.dwarf2/ada-valprint-error.exp: New file.

2017-12-18  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/assign_arr: New testcase.

2017-12-18  Xavier Roirand  <roirand@adacore.com>

	* gdb.ada/funcall_ptr: New testcase.

2017-12-15  Sergio Durigan Junior  <sergiodj@redhat.com>

	PR cli/16224
	* gdb.base/ptype-offsets.cc: New file.
	* gdb.base/ptype-offsets.exp: New file.

2017-12-15  Yao Qi  <yao.qi@linaro.org>

	* gdb.gdb/unittest.exp: Skip 'maintenance check xml-descriptions'
	if XML is disabled.

2017-12-15  Xavier Roirand  <roirand@adacore.com>

	* gdb.ada/same_component_name: New testcase.

2017-12-14  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/str_binop_equal: New testcase.

2017-12-14  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/task_switch_in_core: New testcase.

2017-12-13  Simon Marchi  <simon.marchi@ericsson.com>

	* gdb.python/py-breakpoint.c (foo_ns::multiply): New function.
	* gdb.python/py-breakpoint.exp: Compile the test case as c++,
	call test_bkpt_qualified.
	(test_bkpt_qualified): New proc.

2017-12-13  Pedro Alves  <palves@redhat.com>

	* lib/completion-support.exp (test_gdb_complete_tab_multiple):
	Tighten regexp by matching with an anchor.

2017-12-13  Pedro Alves  <palves@redhat.com>

	* gdb.cp/cpcompletion.exp: Load completion-support.exp.
	("expression with namespace"): New set of tests.
	* gdb.cp/pr9594.cc (Test_NS::foo, Test_NS::bar)
	(Nested::Test_NS::qux): New.
	* lib/completion-support.exp (test_gdb_complete_cmd_multiple): Add
	defaults to 'start_quote_char' and 'end_quote_char' parameters.

2017-12-13  Joel Brobecker  <brobecker@adacore.com>

	* gdb.base/server-del-break.c: New file.
	* gdb.base/server-del-break.exp: New file.

2017-12-12  Stafford Horne  <shorne@gmail.com>

	* gdb.xml/tdesc-regs.exp: Add or1k support.

2017-12-12  Stafford Horne  <shorne@gmail.com>
